fix terminal text wrap

--- a/style.css
+++ b/style.css
@@ -109,7 +109,7 @@ h1 {
   display: flex;
   flex-direction: column-reverse;
   overflow: auto;
-  white-space: pre;
+  white-space: pre-wrap;
   background-color: black;
   max-height: 80px;
   margin: 0px;
